tests/snapshots/scripts_sanitized/Admin API Tool/Clients - ID 18/Send Message to Client ( json ) - ID 48.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: disconnect client
#  HISTORY:
				   - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  2018-06-28 by FName LName
# JSON DOCUMENTATION:
# Notes: The following parameters are documented here. For each action, additional parameters are also listed, optional parameters are shown in square brackets "[]".
#  param

#  JSON EXAMPLE:
# JSONSetElement ( "" 
				 ; [ "param" ; "msg" ; JSONString ]
				)

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

#  Validate json parameter and load it into local variables
Wenn [ JsonToVars ( Hole ( ScriptParameter ) ; "_" ) ]
	Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
	Aktuelles Script verlassen [ 5 // command is invalid ]
Ende (wenn)

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Wenn [ $_param = "msg" ]
	Variable setzen [ $$this.id_client ; FMS_CLI__clients::id_client ]
	Feldwert setzen [ FMS__fmserver::zz_msg_g ; "" ]
	Gehe zu Objekt [ "panel_msg_client" ]
	Gehe zu Feld [ Auswählen/Ausführen ; FMS__fmserver::zz_msg_g ]
	
Sonst, wenn [ $_param = "selectMsg" ]
	Variable setzen [ $$this.id_client ; FMS_GFI_CLI__clients::id_client ]
	Feldwert setzen [ FMS__fmserver::zz_msg_g ; "" ]
	Gehe zu Objekt [ "panel_msg_client" ]
	Gehe zu Feld [ Auswählen/Ausführen ; FMS__fmserver::zz_msg_g ]
	
Sonst, wenn [ $_param = "select" ]
	Feldwert setzen [ FMS__fmserver::ID_Client ; FMS_CLI__clients::ID ]
	
Sonst, wenn [ $_param = "send" ]
	Wenn [ IstLeer ( FMS__fmserver::zz_msg_g ) ]
		Fehlerton
		Aktuelles Script verlassen [ Wahr ]
	Sonst
		Script ausführen [ Aus Liste ; "Set Config" ]
		Variable setzen [ $endpoint ; "/clients/" & $$this.id_client & "/message" ]
		Variable setzen [ $json ; JSONSetElement ( "" ; 
						  [ "messageText"; FMS__fmserver::zz_msg_g ; JSONString ]
						 ) ]
		Variable setzen [ $curloptions ; " --request POST" &
						" --header \"Authorization: Bearer " & $$my.token & "\"" &
						" --header \"Content-Type: application/json\"" &
						" --data @$json" &
						" --dump-header $$my.headers" ]
		# set api update variable
		Variable setzen [ $$API.UPDATE ; "1" ]
		
		# -------------------------------------------------------------
		#  PROCESS
		# -------------------------------------------------------------
		Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
		Script ausführen [ Aus Liste ; "Handle response" ]
	Ende (wenn)
	
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
